5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1582_1334.log
== TEST (2019-03-14 11:20:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 %)

print("Potenciacao: ", 64**0.5)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 8 %)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:30:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 25 % 9)

print("Potenciacao: ", 64**0.5)
-- EXECUTION TIME:
0.138531
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  7
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:30:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 25 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  7
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:36:53) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- EXECUTION TIME:
0.158573
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:38:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- EXECUTION TIME:
0.159712
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:39:39) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 14:49:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 14:53:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 15:07:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:34:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:34:12) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- EXECUTION TIME:
0.157833
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:34:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:49:03) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- EXECUTION TIME:
0.13104
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:52:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:52:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- EXECUTION TIME:
0.152051
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:34:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:34:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**0.5)
-- EXECUTION TIME:
0.124489
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 10:25:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**(1/2))
-- EXECUTION TIME:
0.24711
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 10:28:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**(1/2))
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 10:31:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**(1/2))
-- EXECUTION TIME:
0.134855
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 10:48:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 26 % 9)

print("Potenciacao: ", 64**(1/2))
-- EXECUTION TIME:
0.146546
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 10:52:32) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",26 % 9)

print("Potenciacao: ",64**(1/2))
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 10:55:52) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",26 % 9)

print("Potenciacao: ",64**(1/2))
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:52:01) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",80 % 9)

print("Potenciacao: ",64**(1/2))
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:52:12) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",80 % 9)

print("Potenciacao: ",64**(1/2))
-- EXECUTION TIME:
0.19349
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:52:52) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",80 % 9)

print("Potenciacao: ",81**(1/2))
-- EXECUTION TIME:
0.159118
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  9.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:55:36) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",80 % 9)

print("Potenciacao: ",81**(1/2))
-- EXECUTION TIME:
0.243341
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  9.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:55:41) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",80 % 9)

print("Potenciacao: ",81**(1/2))
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:57:18) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",16//2)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:57:24) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",11 - 3)

print("Multiplicacao: ",2 * 4)

print("Divisao: ",16 / 2)

print("Resto: ",16//2)

print("Potenciacao: ",2**3)
-- EXECUTION TIME:
0.19372
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
